2010-02-13 Frank Kober <goemusic@yahoo.fr>
	* mainwindow.*, passwidget.*: passWidget (Settings) is now a dialog
	window, compact style no longer default, compact style applies 
	immediately when checkbox toggled, but applies to widget
	spacings only for modules added after change.
	* seqdriver.h, lfowidget.cpp: cleanups
	* mainwindow.*, midicctable.cpp: fixed memory leak when opening
	midi control editor
	* pixmaps/jacktr.xpm: icon polished
	
2010-02-09 Frank Kober <goemusic@yahoo.fr>
	* midilfo.*, seqdriver.cpp, main.h: frame size for each LFO data
	queueing at a time limited to 256 points to fix playout of
	high resolution and length LFO waveforms.
    
2010-02-08 Frank Kober <goemusic@yahoo.fr>
	* midilfo.*, lfowidget.cpp: Drawing improved to avoid skipping
	points for custom waveforms with higher resolution than mouse 
	resolution (reported by David Adler)
	* lfoscreen.cpp: Drawing behavior on edges made easier
	
2010-02-06 Frank Kober <goemusic@yahoo.fr>
	* man/*/qmidiarp.1: manpages updated.
	
2010-02-04 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.*, midiseq.*, seqwidget.*, seqscreen.*, mainwindow.cpp:
	Step-by-step recording for sequencer module added. Recording starts
	at the last modified note when record mode is enabled. Note-on
	events need to be enabled for the module to record.
	* pixmaps/seqrecord.xpm: record icon added.
	* pixmaps/Makefile.am: record icon added to package.
	
2010-02-02 Frank Kober <goemusic@yahoo.fr>
	* midiarp.cpp, arpscreen.*, mainwindow.cpp, arpwidget.cpp: Arp
	pattern changes again possible without restarting sequencer queue,
	fixed double-performed pattern change.
	* seqdriver.cpp: fixed initial tick not always been set to zero on 
	queue stop. 
	
2010-02-01 Frank Kober <goemusic@yahoo.fr>
	* seqdriver.cpp, midiarp.cpp: 4 more ticks added as tolerance for 
	external sync to avoid getting off the hook by small clock 
	variations, tick folding function implemented to allow for smooth